syntax = "proto3";
package gwc.gateway.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "gwc/gateway/v1/params.proto";
// Import types
import "gwc/gateway/v1/types.proto";

option go_package = "gwc/x/gateway/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/gwc/gateway/v1/params";
  }

  // StorageEndpoints queries the registered storage endpoints.
  rpc StorageEndpoints(QueryStorageEndpointsRequest) returns (QueryStorageEndpointsResponse) {
    option (google.api.http).get = "/gwc/gateway/v1/storage_endpoints";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryStorageEndpointsRequest is request type for the Query/StorageEndpoints RPC method.
message QueryStorageEndpointsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryStorageEndpointsResponse is response type for the Query/StorageEndpoints RPC method.
message QueryStorageEndpointsResponse {
  repeated StorageInfo storage_infos = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}