syntax = "proto3";
package gwc.gateway.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "gwc/gateway/v1/params.proto";

option go_package = "gwc/x/gateway/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the module
  // parameters.
  // The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  // Upload defines the method for uploading a file to the gateway
  rpc Upload(MsgUpload) returns (MsgUploadResponse);

  // RegisterStorage defines the method for registering storage node endpoints
  rpc RegisterStorage(MsgRegisterStorage) returns (MsgRegisterStorageResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "gwc/x/gateway/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgUpload defines the request type for uploading a file
message MsgUpload {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string filename = 2;
  bytes  data = 3;
}

message MsgUploadResponse {}

// MsgRegisterStorage defines the request type for registering storage endpoints
message MsgRegisterStorage {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  repeated StorageEndpoint endpoints = 2;
}

message StorageEndpoint {
  string chain_id = 1;
  string api_endpoint = 2;
}

message MsgRegisterStorageResponse {}